--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#home</h1>
+<h1>GB's DemoApp</h1>
 <p>Find me in app/views/static_pages/home.html.erb</p>
+
+<p>This will eventually be totally dope home page</p>
