Made some more changes to help and home

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
 <h1>Help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
+
+<p>This is where all the helpful help information will be - it will be super helpful</p>
+
+<img src="http://www.istanbul.edu.tr/english/wp-content/uploads/2012/07/website_under_construction1.png" alt="Site Under Contruction" style="width:500px">
