--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,3 +2,14 @@
 <p>Find me in app/views/static_pages/home.html.erb</p>
 
 <p>This will eventually be totally dope home page</p>
+
+<img src="http://www.istanbul.edu.tr/english/wp-content/uploads/2012/07/website_under_construction1.png" alt="Site Under Contruction" style="width:500px">
+
+<h2> For questions, please find me on LinkedIn:
+<p>
+<a href="http://au.linkedin.com/in/gdlburns" target="_blank">
+    <img src="https://media.licdn.com/media/p/5/005/070/296/15b38ea.jpg" alt="Graeme Burns" style="width:125px">
+</p>
+</h2>	
+		
+		
