--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,13 @@
-<h1>GB's DemoApp</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-
-<p>This will eventually be totally dope home page</p>
-
+<div class="center jumbotron">
+  <h1>GB's DemoApp</h1>
+ 
+  <h2>
+    Welcome to the home page of my Demo app! 
+  </h2>
+  
+ 
 <img src="http://www.istanbul.edu.tr/english/wp-content/uploads/2012/07/website_under_construction1.png" alt="Site Under Contruction" style="width:500px">
+
 
 <h2> For questions, please find me on LinkedIn:
 <p>
@@ -12,4 +16,5 @@
 </p>
 </h2>	
 		
-		
+		<%= link_to "Help is here!", help_path, class: "btn btn-lg btn-primary" %>
+</div>
