--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,11 @@
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "Demo App", root_path, id: "logo" %>
+        <%= link_to "GB's Demo App", root_path, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav pull-right">
-            <li><%= link_to "Home",   root_path %></li>
+            <li><%= link_to "Users",   users_path %></li>
+            <li><%= link_to "Tweets",   tweets_path %></li>
             <li><%= link_to "Help",   help_path %></li>
           </ul>
         </nav>
